--- a/app/src/main/res/layout/tutorial_1.xml
+++ b/app/src/main/res/layout/tutorial_1.xml
@@ -37,7 +37,7 @@
         android:id="@+id/icon"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        app:layout_constraintTop_toBottomOf="@id/tv2"
+        android:layout_marginBottom="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
