--- a/app/src/main/res/layout/tutorial_3.xml
+++ b/app/src/main/res/layout/tutorial_3.xml
@@ -4,16 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
-
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/img_2"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_marginTop="100dp"
+        android:src="@drawable/img_3"/>
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
@@ -23,8 +21,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"
-        android:text="댓글과 좋아요"
-        android:textSize="20sp"/>
+        android:text="연락을 하세요"
+        android:textSize="20dp"/>
     <TextView
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
@@ -34,7 +32,17 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="맘에 드는 글에\n표시를 남기세요"/>
+        android:text="모두와 연락할 수 있습니다"/>
+    <Button
+        android:id="@+id/btn_start"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="시작하기"
+        android:background="@drawable/start"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@id/icon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
     <ImageView
         android:id="@+id/icon"
         android:layout_width="80dp"
@@ -43,6 +51,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_t2"/>
+        android:src="@drawable/ic_t3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
