--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jeongstagram"
+        android:text="@string/app_name"
         android:textSize="40dp"
         android:fontFamily="@font/billabong"
         app:layout_constraintLeft_toLeftOf="parent"
