--- a/app/src/main/res/layout/tutorial_1.xml
+++ b/app/src/main/res/layout/tutorial_1.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv1"
         android:layout_marginTop="100dp"
         android:src="@drawable/img_1"/>
     <TextView
@@ -17,12 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/image"
-        app:layout_constraintBottom_toTopOf="@id/tv2"
+        app:layout_constraintBottom_toTopOf="@id/icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="100dp"
         android:text="일상을 공유하세요!"
-        android:textSize="20dp"/>
+        android:textSize="24dp"/>
     <TextView
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
@@ -32,7 +31,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="서로 하루의 일을\n모두와 공유할 수 있습니다."/>
+        android:text="서로 하루의 일을\n모두와 공유할 수 있습니다."
+        android:textSize="16sp"/>
     <ImageView
         android:id="@+id/icon"
         android:layout_width="80dp"
