--- a/app/src/main/res/layout/tutorial_2.xml
+++ b/app/src/main/res/layout/tutorial_2.xml
@@ -4,27 +4,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
-
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="400dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
-        android:src="@drawable/img_2"
-        app:layout_constraintBottom_toTopOf="@id/tv1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:src="@drawable/img_2"/>
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/image"
-        app:layout_constraintBottom_toTopOf="@id/tv2"
+        app:layout_constraintBottom_toTopOf="@id/icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="100dp"
         android:text="댓글과 좋아요"
-        android:textSize="20sp"/>
+        android:textSize="24dp"/>
     <TextView
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
@@ -34,7 +31,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="맘에 드는 글에\n표시를 남기세요"/>
+        android:text="맘에 드는 글에\n표시를 남기세요"
+        android:textSize="16sp"/>
     <ImageView
         android:id="@+id/icon"
         android:layout_width="80dp"
