--- a/app/src/main/res/drawable/red_edittext.xml
+++ b/app/src/main/res/drawable/red_edittext.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="2dp"
-                android:color="#FF0000" />
+                android:color="@color/red" />
             <solid android:color="#FFFFFF" />
             <corners android:radius="8dp"/>
         </shape>
