--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,8 @@
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
             <EditText
                 android:id="@+id/et_pwd"
                 android:layout_width="match_parent"
@@ -71,7 +72,7 @@
             android:orientation="horizontal"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginVertical="15dp">
+            android:layout_marginVertical="20dp">
             <View
                 android:layout_width="120dp"
                 android:layout_height="1.5dp"
