--- a/app/src/main/res/layout/tutorial_1.xml
+++ b/app/src/main/res/layout/tutorial_1.xml
@@ -4,13 +4,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
-        android:src="@drawable/img_1"/>
+        app:lottie_url="https://assets7.lottiefiles.com/packages/lf20_jvt4bdg7.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
