--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E31717</color>
     <color name="blue">#709CF3</color>
+    <color name="transparent">#00ff0000</color>
 </resources>
