--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toTopOf="@id/iv_user"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/iv_user"
         android:layout_width="220dp"
         android:layout_height="220dp"
@@ -24,6 +24,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="100dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_account"/>
     <TextView
         android:id="@+id/tv2"
