--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".main.HomeFragment">
     <ImageButton
+        android:id="@+id/btn_settingMenu"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_setting_menu"
