--- a/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
@@ -6,9 +6,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".BottomSheetSettingFragment">
 
-    <Button
-        android:id="@+id/btn_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="설정"/>
+    <LinearLayout
+        android:id="@+id/user_setting"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/user_friend"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_user_setting"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="계정설정"
+            android:textSize="22dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/user_friend"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/user_setting"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_friends"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="친구 목록"
+            android:textSize="22dp"/>
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
