--- a/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
@@ -15,8 +15,8 @@
         app:layout_constraintBottom_toTopOf="@id/user_friend"
         android:gravity="center_vertical">
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/ic_user_setting"/>
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="계정설정"
-            android:textSize="22dp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/user_friend"
@@ -35,8 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center_vertical">
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/ic_friends"/>
         <TextView
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="친구 목록"
-            android:textSize="22dp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
 
 
