--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     tools:context=".main.HomeFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="270dp"
         app:layout_constraintTop_toTopOf="parent">
         <ImageButton
             android:id="@+id/btn_settingMenu"
@@ -31,6 +31,7 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/profile"
             app:layout_constraintLeft_toLeftOf="@id/profile"/>
         <TextView
@@ -39,6 +40,20 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/tv_name"
             app:layout_constraintLeft_toLeftOf="@id/profile"/>
+        <Button
+            android:id="@+id/btn_edit_profile"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="프로필 편집"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/line_2"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_introduce"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#9F9F9F"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
