--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -109,7 +109,7 @@
         android:text="개인정보 설정"
         android:textColor="@color/blue"
         android:textSize="18sp"
-        android:layout_marginHorizontal="15dp"
+        android:paddingStart="15dp"
         app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintBottom_toBottomOf="parent"/>
     <View
