--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="@id/btn_cancel"
         app:layout_constraintBottom_toBottomOf="@id/btn_cancel"/>
     <ImageButton
+        android:id="@+id/btn_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_check"
@@ -65,14 +66,17 @@
         android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:layout_marginHorizontal="15dp"
         app:layout_constraintTop_toBottomOf="@id/profile"
         app:layout_constraintBottom_toTopOf="@id/tv_introduce"/>
     <TextView
+        android:id="@+id/tv_error_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름을 입력해주세요"
         android:textColor="@color/red"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/et_name"
         app:layout_constraintLeft_toLeftOf="@id/et_name"/>
     <TextView
@@ -87,6 +91,7 @@
         android:id="@+id/et_introduce"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:layout_marginHorizontal="15dp"
         app:layout_constraintTop_toBottomOf="@id/tv_introduce"/>
     <View
