--- a/app/src/main/res/drawable/ic_setting_menu.xml
+++ b/app/src/main/res/drawable/ic_setting_menu.xml
@@ -1,6 +1,6 @@
-<vector android:height="30dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M501.333,96H10.667C4.779,96 0,100.779 0,106.667s4.779,10.667 10.667,10.667h490.667c5.888,0 10.667,-4.779 10.667,-10.667S507.221,96 501.333,96z"/>
-    <path android:fillColor="#FF000000" android:pathData="M501.333,245.333H10.667C4.779,245.333 0,250.112 0,256s4.779,10.667 10.667,10.667h490.667c5.888,0 10.667,-4.779 10.667,-10.667S507.221,245.333 501.333,245.333z"/>
-    <path android:fillColor="#FF000000" android:pathData="M501.333,394.667H10.667C4.779,394.667 0,399.445 0,405.333C0,411.221 4.779,416 10.667,416h490.667c5.888,0 10.667,-4.779 10.667,-10.667C512,399.445 507.221,394.667 501.333,394.667z"/>
+<vector android:height="30dp" android:viewportHeight="384"
+    android:viewportWidth="384" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="m368,207.668h-352c-8.832,0 -16,-7.168 -16,-16s7.168,-16 16,-16h352c8.832,0 16,7.168 16,16s-7.168,16 -16,16zM368,207.668"/>
+    <path android:fillColor="#FF000000" android:pathData="m368,85h-352c-8.832,0 -16,-7.168 -16,-16s7.168,-16 16,-16h352c8.832,0 16,7.168 16,16s-7.168,16 -16,16zM368,85"/>
+    <path android:fillColor="#FF000000" android:pathData="m368,330.332h-352c-8.832,0 -16,-7.168 -16,-16s7.168,-16 16,-16h352c8.832,0 16,7.168 16,16s-7.168,16 -16,16zM368,330.332"/>
 </vector>
