--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -39,6 +39,7 @@
         android:id="@+id/profile"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_cancel"
@@ -59,8 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/et_name"
         app:layout_constraintBottom_toTopOf="@id/et_name"/>
     <EditText
         android:id="@+id/et_name"
@@ -69,7 +69,7 @@
         android:inputType="text"
         android:layout_marginHorizontal="15dp"
         app:layout_constraintTop_toBottomOf="@id/profile"
-        app:layout_constraintBottom_toTopOf="@id/tv_introduce"/>
+        app:layout_constraintBottom_toTopOf="@id/et_introduce"/>
     <TextView
         android:id="@+id/tv_error_name"
         android:layout_width="wrap_content"
@@ -84,23 +84,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="소개"
-        app:layout_constraintLeft_toLeftOf="@id/tv_name"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
-        app:layout_constraintBottom_toTopOf="@id/line"/>
+        app:layout_constraintLeft_toLeftOf="@id/et_introduce"
+
+        app:layout_constraintBottom_toTopOf="@id/et_introduce"/>
     <EditText
         android:id="@+id/et_introduce"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_marginHorizontal="15dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_introduce"/>
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#9F9F9F"
-        app:layout_constraintTop_toBottomOf="@id/tv_introduce"
+        app:layout_constraintTop_toBottomOf="@id/et_name"
         app:layout_constraintBottom_toTopOf="@id/user_setting"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -109,13 +104,14 @@
     <TextView
         android:id="@+id/user_setting"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:gravity="center_vertical"
         android:text="개인정보 설정"
         android:textColor="@color/blue"
         android:textSize="18sp"
         android:paddingStart="15dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintTop_toBottomOf="@id/et_introduce"
         app:layout_constraintBottom_toBottomOf="parent"/>
     <View
         android:layout_width="match_parent"
