--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -34,4 +34,47 @@
         app:layout_constraintTop_toTopOf="@id/btn_cancel"
         app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
         app:layout_constraintRight_toRightOf="parent"/>
+    <ImageView
+        android:id="@+id/post_Image"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_cancel"
+        android:layout_marginTop="30dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="위치"
+        app:layout_constraintLeft_toLeftOf="@id/et_location"
+        app:layout_constraintBottom_toTopOf="@id/et_location"/>
+    <EditText
+        android:id="@+id/et_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toTopOf="@id/et_post"
+        app:layout_constraintTop_toBottomOf="@id/post_Image"/>
+    <ImageButton
+        android:id="@+id/btn_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_location"
+        android:background="@color/transparent"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toTopOf="@id/et_location"
+        app:layout_constraintBottom_toBottomOf="@id/et_location"
+        app:layout_constraintLeft_toRightOf="@id/et_location"/>
+    <EditText
+        android:id="@+id/et_post"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/line_2"
+        android:gravity="top"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_location"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
