--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/et_email"
+                android:id="@+id/email_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="Email"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
             <EditText
-                android:id="@+id/et_pwd"
+                android:id="@+id/password_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="password"
@@ -60,7 +60,7 @@
         app:layout_constraintBottom_toTopOf="@id/layout3"
         app:layout_constraintTop_toBottomOf="@id/layout1">
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="로그인"
@@ -88,14 +88,14 @@
                 android:background="@drawable/line"/>
         </LinearLayout>
         <Button
-            android:id="@+id/btn_glogin"
+            android:id="@+id/google_login_button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="구글 로그인"
             android:textColor="@color/white"
             android:background="@drawable/btn_signin_google"/>
         <Button
-            android:id="@+id/btn_flogin"
+            android:id="@+id/facebook_login_button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
@@ -127,7 +127,7 @@
             android:layout_marginRight="6dp"
             android:text="아직 회원이 아니신가요?"/>
         <TextView
-            android:id="@+id/join"
+            android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
