--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".SettingActivity">
     <ImageButton
-        android:id="@+id/btn_back"
+        android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_arrow_back"
@@ -30,12 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv1"
-        app:layout_constraintBottom_toTopOf="@id/tv_email"
+        app:layout_constraintBottom_toTopOf="@id/email_textview"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:text="이메일"/>
     <TextView
-        android:id="@+id/tv_email"
+        android:id="@+id/email_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv2"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="현재 계정 로그아웃"
-        app:layout_constraintTop_toBottomOf="@id/tv_email"
+        app:layout_constraintTop_toBottomOf="@id/email_textview"
         app:layout_constraintBottom_toTopOf="@id/withdrawal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
