--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".WriteActivity">
     <ImageButton
-        android:id="@+id/btn_cancel"
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cancel"
@@ -21,57 +21,57 @@
         android:text="새 게시물"
         android:textSize="22sp"
         android:layout_marginLeft="40dp"
-        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
-        app:layout_constraintTop_toTopOf="@id/btn_cancel"
-        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"/>
+        app:layout_constraintLeft_toRightOf="@id/cancel_button"
+        app:layout_constraintTop_toTopOf="@id/cancel_button"
+        app:layout_constraintBottom_toBottomOf="@id/cancel_button"/>
     <ImageButton
-        android:id="@+id/btn_send"
+        android:id="@+id/send_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_check"
         android:background="@color/transparent"
         android:layout_marginRight="15dp"
-        app:layout_constraintTop_toTopOf="@id/btn_cancel"
-        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
+        app:layout_constraintTop_toTopOf="@id/cancel_button"
+        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
         app:layout_constraintRight_toRightOf="parent"/>
     <ImageView
-        android:id="@+id/post_Image"
+        android:id="@+id/post_imageview"
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_cancel"
+        app:layout_constraintTop_toBottomOf="@id/cancel_button"
         android:layout_marginTop="30dp"
         android:src="@drawable/line_2"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="위치"
-        app:layout_constraintLeft_toLeftOf="@id/et_location"
-        app:layout_constraintBottom_toTopOf="@id/et_location"/>
+        app:layout_constraintLeft_toLeftOf="@id/location_edittext"
+        app:layout_constraintBottom_toTopOf="@id/location_edittext"/>
     <EditText
-        android:id="@+id/et_location"
+        android:id="@+id/location_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="70dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintBottom_toTopOf="@id/et_post"
-        app:layout_constraintTop_toBottomOf="@id/post_Image"/>
+        app:layout_constraintBottom_toTopOf="@id/post_edittext"
+        app:layout_constraintTop_toBottomOf="@id/post_imageview"/>
     <ImageButton
-        android:id="@+id/btn_location"
+        android:id="@+id/location_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_location"
         android:background="@color/transparent"
         android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toTopOf="@id/et_location"
-        app:layout_constraintBottom_toBottomOf="@id/et_location"
-        app:layout_constraintLeft_toRightOf="@id/et_location"/>
+        app:layout_constraintTop_toTopOf="@id/location_edittext"
+        app:layout_constraintBottom_toBottomOf="@id/location_edittext"
+        app:layout_constraintLeft_toRightOf="@id/location_edittext"/>
 
     <EditText
-        android:id="@+id/et_post"
+        android:id="@+id/post_edittext"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
@@ -81,5 +81,5 @@
         android:padding="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_location" />
+        app:layout_constraintTop_toBottomOf="@id/location_edittext" />
 </androidx.constraintlayout.widget.ConstraintLayout>
